--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <head>
-    <title>하버드 평생주소</title>
+    <title>하버드 바로가기</title>
+    <link rel="icon" href="/img/harvard fv.png">
     <style>
         html{
             -webkit-touch-callout: none;
