--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <map name="image-map1">
         <area target="" alt="1" title="1" href="http://hv-rd.com" coords="735,973,1186,1040" shape="rect">
-        <area target="" alt="2" title="2" href="http://hv-7979.com" coords="732,1053,1183,1120" shape="rect">
+        <area target="" alt="2" title="2" href="http://hv-rt.com" coords="732,1053,1183,1120" shape="rect">
         <area target="" alt="3" title="3" href="http://하버드바로가기.com" coords="729,1296,1181,1366" shape="rect">
         <area target="" alt="4" title="4" href="https://t.me/hvd115" coords="790,1469,1122,1525" shape="rect">
     </map>
@@ -67,7 +67,7 @@
 
     <map name="image-map2">
         <area target="" alt="1" title="1" href="http://hv-rd.com" coords="137,1304,760,1395" shape="rect">
-        <area target="" alt="2" title="2" href="http://hv-7979.com" coords="133,1416,757,1506" shape="rect">
+        <area target="" alt="2" title="2" href="http://hv-rt.com" coords="133,1416,757,1506" shape="rect">
         <area target="" alt="3" title="3" href="http://하버드바로가기.com" coords="131,1753,754,1842" shape="rect">
         <area target="" alt="4" title="4" href="https://t.me/hvd115" coords="216,1989,675,2066" shape="rect">
     </map>
